# ArchiveTool

./: CMakeLists.txt  readme.md
algorithm/: CMakeLists.txt  Haffman.h  LZ77.h  RLE.h
bitfield/: CMakeLists.txt  tbitfield.h  tset.h
bitset/: CMakeLists.txt
file/: CMakeLists.txt  File.h
include/: Archiver.h  BitfieldUtilities.h  CMakeLists.txt  CompressedFile.h  CompressionAlgorithm.h  File.h  FileLoader.h  Haffman.h  HaffmanTreeCreator.h  LZ77.h  Merger.h  RLE-encoder.h  RLE.h  StringUtilities.h  Unpacker.h  file_loader.h  tbitfield.h  tset.h  utilites.h
samples/: CMakeLists.txt  samples.cpp
src/: CMakeLists.txt  tbitfield.cpp  tset.cpp  utilites.cpp
thread_pool/: CMakeLists.txt  pool.h
ui/: CMakeLists.txt  ConsoleWindow.h  ui.cpp
